# RID

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/api/: deps.py  langflow_mixin.py  main.py  middleware.py
backend/api/routers/: langflow.py  langflow_auth.py  tenant.py
backend/api/services/: langflow_client.py  langflow_workspace.py
backend/apps/accounts/: admin.py  auth_gate.py  models.py  views.py
backend/apps/accounts/management/: __init__.py
backend/apps/tenants/: apps.py  langflow_pg_bootstrap.py  models.py  services.py  signals.py
backend/core/: adapters.py  asgi.py  auth_backends.py  settings.py  tenant_middleware.py  urls.py  wsgi.py
backend/helpers/: billing.py  utils.py
backend/templates/: base.html
backend/templates/apps/rockitdown/: index.html
backend/templates/flows/: error.html
backend/tests/: conftest.py  test_architecture.py  test_auth_check_view.py  test_auth_gate_helpers.py  test_auth_gate_integration.py  test_auth_tenant_backend.py  test_compose_traefik.py  test_confirm_email_command.py  test_create_dev_user_command.py  test_deps.py  test_env_example_proxy.py  test_env_example_traefik.py  test_flows_error_page.py  test_health.py  test_langflow_bridge_auto_login.py  test_langflow_client.py  test_langflow_pg_bootstrap.py  test_langflow_service_credentials.py  test_langflow_workspace.py  test_proxy_settings.py  test_spa_localhost_tenant.py  test_tenant_header_middleware.py  test_user_and_schema.py
(+193 files in other folders)
